--- a/src/SBMonitor.BlazorApp/wwwroot/index.html
+++ b/src/SBMonitor.BlazorApp/wwwroot/index.html
@@ -8,6 +8,8 @@
     <meta name="author" content="AntiPattern">
     <title>SB Monitor</title>
 
+    <base href="/" />
+
     <link rel="canonical" href="https://sbmonitor.com">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -30,11 +32,11 @@
         }
     </style>
 
-    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css" rel="stylesheet" />
+    <link href="/_content/Blazorise/blazorise.css" rel="stylesheet" />
+    <link href="/_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css" rel="stylesheet" />
 
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="SBMonitor.BlazorApp.styles.css" rel="stylesheet" />
+    <link href="/css/app.css" rel="stylesheet" />
+    <link href="/SBMonitor.BlazorApp.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -45,7 +47,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="/_framework/blazor.webassembly.js"></script>
+
+    <script src="/_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.29.0/dist/feather.min.js" crossorigin="anonymous"></script>
