--- a/src/SBMonitor.BlazorApp/wwwroot/index.html
+++ b/src/SBMonitor.BlazorApp/wwwroot/index.html
@@ -41,7 +41,7 @@
 
 <body>
     <div id="app">
-        <div class="d-flex justify-content-center">
+        <div class="container h-100 d-flex justify-content-center pt-5">
             <div class="spinner-grow" role="status" />
         </div>
     </div>
