--- a/src/SBMonitor.BlazorApp/wwwroot/index.html
+++ b/src/SBMonitor.BlazorApp/wwwroot/index.html
@@ -8,6 +8,8 @@
     <meta name="author" content="AntiPattern">
     <title>Message Silo</title>
 
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png" />
+
     <base href="/" />
 
     <link rel="canonical" href="https://sbmonitor.com">
