--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/wwwroot/index.html
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/wwwroot/index.html
@@ -37,6 +37,7 @@
 
     <script src="js/material/material.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
 </body>
 
 </html>
