--- a/src/MessageSilo.Client/wwwroot/index.html
+++ b/src/MessageSilo.Client/wwwroot/index.html
@@ -31,7 +31,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
 </body>
 
